--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "rollup-starter-lib",
+  "name": "webusb-serial",
   "version": "1.0.0",
-  "main": "dist/how-long-till-lunch.cjs.js",
-  "module": "dist/how-long-till-lunch.esm.js",
-  "browser": "dist/how-long-till-lunch.umd.js",
-  "dependencies": {
-    "ms": "^2.0.0"
+  "description": "A WebSerial implementation using WebUSB",
+  "main": "dist/webusb-serial.cjs.js",
+  "module": "dist/webusb-serial.esm.js",
+  "browser": "dist/webusb-serial.umd.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NielsLeenheer/WebUSBSerial.git"
   },
+  "keywords": [
+    "serial",
+    "usb",
+    "webserial",
+    "webusb",
+    "dongle",
+    "ftdi",
+    "pl2303",
+    "cp2102"
+  ],
+  "author": "Niels Leenheer",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/NielsLeenheer/WebUSBSerial/issues"
+  },
+  "homepage": "https://github.com/NielsLeenheer/WebUSBSerial#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
@@ -14,9 +32,7 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "test": "node test/test.js",
-    "pretest": "npm run build"
+    "dev": "rollup -c -w"
   },
   "files": [
     "dist"
